# opengl_snake

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/: border.h  constants.h  food.h  game.h  resource_manager.h  shader.h  snake.h  sprite_renderer.h  text_renderer.h  texture.h
libs/glad/: glad.h
res/shaders/: sprite.frag  sprite.vert  text.frag
src/: border.cpp  food.cpp  game.cpp  main.cpp  snake.cpp
